vlib/v/parser/tests/generic_lowercase_err.out
vlib/v/parser/tests/generic_lowercase_err.vv:1:22: error: generic parameter needs to be uppercase
    1 | fn lowercase_generic<a>() {}
      |                      ^
