vlib/v/parser/tests/generic_lowercase_err.vv
fn lowercase_generic<a>() {}
